Minor fixes based on code review comments